syntax = "proto3";

package producto;

service ProductService {
  rpc GetProduct (ProductRequest) returns (ProductResponse);
  rpc ListProduct (Empty) returns (ProductListResponse);
}

message ProductRequest {
  int32 id = 1;
}

message ProductResponse {
  int32 id = 1;
  string name = 2;
  float price = 3;
}

message Product {
  int32 id = 1;
  string name = 2;
  float price = 3;
}

message ProductListResponse {
  repeated Product products = 1;
}

message Empty {}
